テーブル定義などビジネスメタデータをmysqlとsparkに保存

--- a/test.ipynb
+++ b/test.ipynb
@@ -1622,7 +1622,272 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ビジネスメタデータ(カラム名確認)\n",
+    "#select co.COLUMN_NAME from TBLS as t inner join SDS as s on t.SD = s.SD_ID inner join CDS as c on s.CD=c.CD_ID inner join COLUMNS_V2 as co on c.CD_ID = co.CD_ID where TBL_NAME = \"jinko_t\";\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--メタデータを保存するためのデータベースとテーブル\n",
+    "create database if not exists metadata;\n",
+    "use metadata;\n",
+    "create table if not exists metadatas (\n",
+    "    database_name varchar(255),\n",
+    "    table_name varchar(255),\n",
+    "    table_definition varchar(255),\n",
+    "    sammary varchar(255),\n",
+    "    row_num varchar(255),\n",
+    "    selectivity varchar(255),\n",
+    "    consistency_flag varchar(255),\n",
+    "    frequency_flag varchar(255),\n",
+    "    primary key (database_name,table_name)\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import findspark\n",
+    "findspark.init(\"/opt/homebrew/opt/apache-spark/libexec/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pysparkに必要なライブラリを読み込む\n",
+    "\n",
+    "from pyspark import SparkConf\n",
+    "from pyspark import SparkContext\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "#spark sessionの作成\n",
+    "# spark.ui.enabled trueとするとSparkのGUI画面を確認することができます\n",
+    "# spark.eventLog.enabled true　とすると　GUIで実行ログを確認することができます\n",
+    "# GUIなどの確認は最後のセクションで説明を行います。\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"chapter2\") \\\n",
+    "    .config(\"hive.exec.dynamic.partition\", \"true\") \\\n",
+    "    .config(\"hive.exec.dynamic.partition.mode\", \"nonstrict\") \\\n",
+    "    .config(\"spark.sql.session.timeZone\", \"JST\") \\\n",
+    "    .config(\"spark.ui.enabled\",\"true\") \\\n",
+    "    .config(\"spark.eventLog.enabled\",\"true\") \\\n",
+    "    .enableHiveSupport() \\\n",
+    "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark.sql(\"\"\"\n",
+    "          create database if not exists metadata_tmp\n",
+    "          \"\"\")\n",
+    "spark.sql(\"\"\"\n",
+    "           create table if not exists metadata_tmp.sample_metadata(\n",
+    "    database_name String,\n",
+    "    table_name String,\n",
+    "    table_definition String,\n",
+    "    sammary String)\n",
+    "STORED AS PARQUET\n",
+    "LOCATION \"/Users/isomasaki/pyspark_datamanagement_metadata/dataset/metadata_tmp.db/sample_metadata\";\n",
+    "          \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "create table if not exists metadata_tmp.sample_metadata(\n",
+    "    database_name String,\n",
+    "    table_name String,\n",
+    "    table_definition String,\n",
+    "    sammary String,\n",
+    "    row_num String,\n",
+    "    selectivity String,\n",
+    "    consistency_flag String,\n",
+    "    frequency_flag String)\n",
+    "STORED AS PARQUET\n",
+    "LOCATION \"/Users/isomasaki/pyspark_datamanagement_metadata/dataset/metadata_tmp.db/sample_metadata\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+---------------+-----------+\n",
+      "|   namespace|      tableName|isTemporary|\n",
+      "+------------+---------------+-----------+\n",
+      "|metadata_tmp|sample_metadata|      false|\n",
+      "|            |     sample_tmp|       true|\n",
+      "+------------+---------------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"show tables in metadata_tmp\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import StructType,StructField,StringType,BooleanType\n",
+    "from pyspark.sql.functions import when\n",
+    "\n",
+    "#spark経由でテーブル定義を取得\n",
+    "table_def = spark.sql(\"\"\"\n",
+    "                      show create table data_management_c.jinko_t\n",
+    "                      \"\"\").collect()[0].asDict()[\"createtab_stmt\"]\n",
+    "\n",
+    "struct = StructType([StructField(\"database_name\",StringType(),True),\n",
+    "                     StructField(\"table_name\",StringType(),True),\n",
+    "                     StructField(\"table_definition\",StringType(),True),\n",
+    "                     StructField(\"sammary\",StringType(),True),\n",
+    "                     StructField(\"row_num\",StringType(),True),\n",
+    "                     StructField(\"selectivity\",StringType(),True),\n",
+    "                     StructField(\"consistency_flag\",StringType(),True),\n",
+    "                     StructField(\"frequency_flag\",StringType(),True)\n",
+    "                     ])\n",
+    "df_meta = spark.createDataFrame([(None,None,None,None,None,None,None,None)],struct) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+-------+-----------+----------------+--------------+\n",
+      "|database_name    |table_name|table_definition                                                                                                                                                                                                                                                                                                                                                                                                           |sammary     |row_num|selectivity|consistency_flag|frequency_flag|\n",
+      "+-----------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+-------+-----------+----------------+--------------+\n",
+      "|data_management_c|jinko_t   |CREATE TABLE data_management_c.jinko_t (\\n  code STRING,\\n  gengo STRING,\\n  wareki STRING,\\n  seireki STRING,\\n  chu STRING,\\n  sokei STRING,\\n  jinko_male STRING,\\n  jinko_female STRING,\\n  kenmei STRING)\\nUSING parquet\\nPARTITIONED BY (kenmei)\\nLOCATION 'file:/Users/isomasaki/pyspark_datamanagement_metadata/dataset/data_management_c.db/jinko_t'\\nTBLPROPERTIES (\\n  'transient_lastDdlTime' = '1658450780')\\n|一旦説明は空|null   |null       |null            |null          |\n",
+      "+-----------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+-------+-----------+----------------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_meta2 = df_meta.withColumn(\"database_name\",when(df_meta.database_name.isNull(),\"data_management_c\").otherwise(df_meta.database_name))\n",
+    "df_meta2 = df_meta2.withColumn(\"table_name\",when(df_meta.table_name.isNull(),\"jinko_t\").otherwise(df_meta.table_name))\n",
+    "df_meta2 = df_meta2.withColumn(\"table_definition\",when(df_meta.table_definition.isNull(),table_def).otherwise(df_meta.table_definition))\n",
+    "df_meta2 = df_meta2.withColumn(\"sammary\",when(df_meta.sammary.isNull(),\"一旦説明は空\").otherwise(df_meta.sammary))\n",
+    "\n",
+    "df_meta2.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_meta2.createOrReplaceTempView(\"sample_tmp\")\n",
+    "spark.sql(\"\"\"\n",
+    "          insert overwrite table metadata_tmp.sample_metadata\n",
+    "          select /** repartition(1) */\n",
+    "            *\n",
+    "          from \n",
+    "            sample_tmp\n",
+    "          \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+----------+--------------------+------------+-------+-----------+----------------+--------------+\n",
+      "|    database_name|table_name|    table_definition|     sammary|row_num|selectivity|consistency_flag|frequency_flag|\n",
+      "+-----------------+----------+--------------------+------------+-------+-----------+----------------+--------------+\n",
+      "|data_management_c|   jinko_t|CREATE TABLE data...|一旦説明は空|   null|       null|            null|          null|\n",
+      "+-----------------+----------+--------------------+------------+-------+-----------+----------------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"\"\"\n",
+    "          select \n",
+    "            *\n",
+    "          from \n",
+    "            metadata_tmp.sample_metadata\n",
+    "          \"\"\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()\n",
+    "spark.sparkContext.stop()"
+   ]
   }
  ],
  "metadata": {
