テクニカルメタデータの格納

--- a/test.ipynb
+++ b/test.ipynb
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1887,6 +1887,369 @@
    "source": [
     "spark.stop()\n",
     "spark.sparkContext.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/07/23 23:44:18 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "22/07/23 23:44:18 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "22/07/23 23:44:18 WARN ObjectStore: Failed to get database global_temp, returning NoSuchObjectException\n",
+      "22/07/23 23:44:18 WARN SessionState: METASTORE_FILTER_HOOK will be ignored, since hive.security.authorization.manager is set to instance of HiveAuthorizerFactory.\n",
+      "22/07/23 23:44:18 WARN HiveConf: HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
+      "22/07/23 23:44:18 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "22/07/23 23:44:18 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "+-------+\n",
+      "|row_num|\n",
+      "+-------+\n",
+      "|    300|\n",
+      "+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#テクニカルメタデータ　データプロファイリング\n",
+    "#無駄なクエリを打たないように、事前に基礎データを作る\n",
+    "#件数、平均、合計値\n",
+    "\n",
+    "#件数の取得\n",
+    "spark.sql(\"refresh table data_management_c.jinko_t\")\n",
+    "record_num = spark.sql(\"select count(*) as row_num from data_management_c.jinko_t\")\n",
+    "record_num.show()\n",
+    "\n",
+    "#件数情報を取得する\n",
+    "record_count = record_num.collect()[0].asDict()[\"row_num\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 8:>                                                          (0 + 8) / 8]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+\n",
+      "|            avg|\n",
+      "+---------------+\n",
+      "|2277082041.0000|\n",
+      "+---------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "#平均と合計値\n",
+    "spark.sql(\"refresh table data_management_c.jinko_t\")\n",
+    "avg = spark.sql(\"\"\"\n",
+    "                select \n",
+    "                  avg(sum) as avg\n",
+    "                from (\n",
+    "                    select\n",
+    "                      cast(sum(jinko_male)+sum(jinko_female) as decimal(19,0)) as sum\n",
+    "                    from \n",
+    "                      data_management_c.jinko_t\n",
+    "                )\n",
+    "                \"\"\")\n",
+    "avg.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|       sum|\n",
+      "+----------+\n",
+      "|2277082041|\n",
+      "+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"refresh table data_management_c.jinko_t\")\n",
+    "sum = spark.sql(\"\"\"\n",
+    "                select\n",
+    "                    cast(sum(jinko_male)+sum(jinko_female) as decimal(19,0)) as sum\n",
+    "                from \n",
+    "                    data_management_c.jinko_t\n",
+    "                \"\"\")\n",
+    "sum.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/07/24 00:13:18 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 42:=============================>                            (4 + 4) / 8]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|cardinality_code|cardinality_gengo|cardinality_wareki|cardinality_seireki|cardinality_chu|cardinality_sokei|cardinality_jinko_male|cardinality_jinko_female|cardinality_kenmei|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|            0.17|             0.00|              0.02|               0.02|           0.00|             1.01|                  0.97|                    1.07|              0.16|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "#カーディナリティ(データのカウントにおけるバラけ具合)とセレクティビリティ(重複などないか)\n",
+    "\n",
+    "from pyspark.sql.functions import approx_count_distinct\n",
+    "from pyspark.sql.types import DecimalType\n",
+    "\n",
+    "card = spark.sql(\"select * from data_management_c.jinko_t\")\n",
+    "cols_cardinality = card.select([(approx_count_distinct(c)/card.count()). \\\n",
+    "    cast(DecimalType(38,2)).alias(\"cardinality_\"+c) for c in card.columns\n",
+    "    ])\n",
+    "cols_cardinality.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|count(DISTINCT code)|\n",
+      "+--------------------+\n",
+      "|                  50|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+------+\n",
+      "|trunsaction|master|\n",
+      "+-----------+------+\n",
+      "|         47|    50|\n",
+      "+-----------+------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+\n",
+      "|selectivity|\n",
+      "+-----------+\n",
+      "|       0.94|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import approx_count_distinct\n",
+    "from pyspark.sql.types import DecimalType\n",
+    "\n",
+    "spark.sql(\"select count(distinct jinko.code) from data_management_c.jinko_t as jinko\").show()\n",
+    "card = spark.sql(\"\"\"\n",
+    "                 select\n",
+    "                   count(distinct jinko.code) as trunsaction,\n",
+    "                   count(distinct num.num_code) as master\n",
+    "                 from \n",
+    "                   data_management_c.jinko_t as jinko\n",
+    "                 cross join \n",
+    "                 (\n",
+    "                     select \n",
+    "                       code as num_code\n",
+    "                     from\n",
+    "                       data_management_c.jinko_t\n",
+    "                 ) as num\n",
+    "                 where\n",
+    "                   jinko.code in (\n",
+    "                       select \n",
+    "                         code as num_code\n",
+    "                       from \n",
+    "                         data_management_c.jinko_code\n",
+    "                   )\n",
+    "                 \"\"\")\n",
+    "card.show()\n",
+    "\n",
+    "cols_selectivity = card.select((card.trunsaction/card.master).cast(DecimalType(38,2)).alias(\"selectivity\"))\n",
+    "\n",
+    "cols_selectivity.show()\n",
+    "\n",
+    "#パーティション指定した場合にどれだけ返却されるか\n",
+    "cols_selectivity.createOrReplaceTempView(\"tmp\")\n",
+    "list_selectivity = spark.sql(\n",
+    "    \"\"\"\n",
+    "    select\n",
+    "      selectivity as concat\n",
+    "    from \n",
+    "      tmp\n",
+    "    \"\"\"\n",
+    ").collect()[0].asDict()[\"concat\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "False\n",
+      "+----+\n",
+      "|diff|\n",
+      "+----+\n",
+      "|  00|\n",
+      "|  0A|\n",
+      "|  14|\n",
+      "+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    " #コンシステンシー(キーが存在するか)\n",
+    " \n",
+    " jinko_code = spark.sql(\"select distinct(code) from data_management_c.jinko_code\")\n",
+    " jinko_t = spark.sql(\"select distinct(code) from data_management_c.jinko_t\")\n",
+    " \n",
+    " print(jinko_code.count())\n",
+    " print(jinko_t.count())\n",
+    " \n",
+    " consistency_flag = True\n",
+    " if jinko_t.subtract(jinko_code).selectExpr(\"code as diff\").count()!= 0:\n",
+    "     consistency_flag = False\n",
+    "\n",
+    "print(consistency_flag)\n",
+    "\n",
+    "jinko_t.subtract(jinko_code).selectExpr(\"code as diff\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+----------+--------------------+------------+-------+-----------+----------------+--------------+\n",
+      "|    database_name|table_name|    table_definition|     sammary|row_num|selectivity|consistency_flag|frequency_flag|\n",
+      "+-----------------+----------+--------------------+------------+-------+-----------+----------------+--------------+\n",
+      "|data_management_c|   jinko_t|CREATE TABLE data...|一旦説明は空|    300|       0.94|           false|          null|\n",
+      "+-----------------+----------+--------------------+------------+-------+-----------+----------------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pkgutil import read_code\n",
+    "from pyspark.sql.functions import when \n",
+    "\n",
+    "metadata_df = spark.sql(\"select * from metadata_tmp.sample_metadata\")\n",
+    "metadata_df = metadata_df.\\\n",
+    "    withColumn(\"row_num\",when(metadata_df.row_num.isNull(),record_count))\n",
+    "metadata_df = metadata_df.\\\n",
+    "    withColumn(\"selectivity\",when(metadata_df.selectivity.isNull(),list_selectivity))\n",
+    "metadata_df = metadata_df.\\\n",
+    "    withColumn(\"consistency_flag\",when(metadata_df.consistency_flag.isNull(),consistency_flag))\n",
+    "\n",
+    "metadata_df.show()"
    ]
   }
  ],
